Створена риба для уроку по формам

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<li><a href="position-fixed.html">Fixed</a></li>
 		<li><a href="border-radius.html">Border-radius</a></li>
 		<li><a href="background.html">Фон</a></li>
+		<li><a href="form.html">Форми</a></li>
 	</ul>
 </body>
 </html>
