--- a/form.html
+++ b/form.html
@@ -5,6 +5,60 @@
 	<title>Document</title>
 </head>
 <body>
-	
+	<div class="form">
+		<form action="#">
+			<input type="text" 
+					name="login" 
+					placeholder="Введіть логін" 
+					title="Введіть логін"
+					value="Дмитро" 
+				><br>
+			<input type="password"
+					name="pass"
+					placeholder="Введіть пароль" 
+			><br>
+			<input type="checkbox"
+					name="ok"
+
+			><br>
+			<input type="checkbox"
+					name="ch"
+					checked
+			><br>
+			<input type="radio"
+					name="radio1" 
+			><br>
+			<input type="radio"
+					name="radio2"
+					value="1"
+					id="radio1" 
+					checked
+			><br>
+			<label><input type="radio"
+					name="radio2"
+					value="2" 
+			>Значення 2</label><br>
+			<label for="radio1">Значення 1</label><br>
+			<input type="date"
+				name="date" 
+			><br>
+			<input type="color"
+				name="color" 
+				><br>
+			<input type="email"
+				name="email" 
+			><br>
+			<input type="submit" value="Відправити">
+			<input type="reset" value="Відмінити"><br>
+			<select name="city"
+					multiple 
+			>
+				<option value="1">Київ</option>
+				<option value="2">Івано-Франківськ</option>
+				<option value="3">Львів</option>
+			</select><br>
+			<textarea name="text" cols="30" rows="3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, nemo, hic! Necessitatibus quis itaque in, veniam minima eveniet quidem quam voluptatem. Ut, sint quos et dolor omnis. Natus nesciunt, unde!</textarea>
+		</form>
+	</div>
 </body>
 </html>
